# project-music-download

backend/: .gitignore  manage.py  pyproject.toml
backend/apps/downloaders/: apps.py
backend/apps/genres/: admin.py  models.py
backend/apps/genres/migrations/: 0001_initial.py
backend/apps/musics/: admin.py  apps.py  models.py
backend/apps/musics/migrations/: 0001_initial.py
backend/apps/users/: manager.py  models.py
backend/apps/users/migrations/: 0001_initial.py
backend/project/: settings.py  urls.py
backend/project/swagger/: apps.py  urls.py
frontend/: package-lock.json
